--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -116,7 +116,8 @@ development:
 
     # Raise an error when performing a #find and the document is not found.
     # (default: true)
-    # raise_not_found_error: true
+    # changing this from default so that we can search for latest dates prior to date entry without missing dates causing error
+    raise_not_found_error: false
 
     # Raise an error when defining a scope with the same name as an
     # existing method. (default: false)
