--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -153,6 +153,7 @@ test:
       hosts:
         - localhost:27017
       options:
+        raise_not_found_error: false
         read:
           mode: :primary
         max_pool_size: 1
